--- a/15/15.csproj
+++ b/15/15.csproj
@@ -52,6 +52,7 @@
     <None Remove="imgs\rare_shield.png" />
     <None Remove="imgs\rare_sword.png" />
     <None Remove="imgs\rare_wand.png" />
+    <None Remove="imgs\romashki.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -108,6 +109,7 @@
     <Resource Include="imgs\rare_shield.png" />
     <Resource Include="imgs\rare_sword.png" />
     <Resource Include="imgs\rare_wand.png" />
+    <Resource Include="imgs\romashki.png" />
     <Resource Include="imgs\stena.jpg" />
     <Resource Include="imgs\twohandd.png" />
     <Resource Include="imgs\карта.jpg" />
